# wtftw

./: Cargo.toml
core/: Cargo.toml
core/src/: config.rs  handlers.rs  wtftw.rs
src/: wtftw.rs
