[project]

name = "wtftw"
version = "0.4.4"
authors = ["Simon Wollwage"]

[dependencies]
bitflags = "0.5"
serde = "1.0.32"
serde_json = "1.0.11"
serde_derive = "1.0.32"
getopts = "0.2.17"
log = "0.4.1"
num = "0.1.32"
libc = "0.2.10"
dylib = "0.0.3"
zombie = "0.0.4"
wtftw_core = { path = "core" }

[dependencies.wtftw_xlib]
path = "xlib"

[lib]
name = "wtftw"
path = "core/src/wtftw.rs"

[[bin]]
name = "wtftw"
path = "src/wtftw.rs"
